[package]
name = "unidrive-mount"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "unidrive_mount"
path = "src/lib.rs"

[[bin]]
name = "unidrive-mount"
path = "src/main.rs"

[dependencies]
fuse3 = { version = "0.9", features = ["tokio-runtime", "unprivileged"] }
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "sync", "macros", "net", "signal", "time", "process"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"
# `tempfile` is used by `fake_jvm` (a test helper gated on `debug_assertions`
# OR `test`). It is exposed from `src/` so integration tests can `use` it
# directly via the library crate; that requires it as a normal dependency
# (release builds strip the module entirely via `cfg(debug_assertions)`).
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
