[package]
name = "unidrive-mount"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "unidrive_mount"
path = "src/lib.rs"

[[bin]]
name = "unidrive-mount"
path = "src/main.rs"

[dependencies]
fuse3 = { version = "0.9", features = ["tokio-runtime", "unprivileged"] }
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "sync", "macros", "net", "signal", "time", "process"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
libc = "0.2"
bytes = "1"
futures-util = "0.3"
unicode-normalization = "0.1"
[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
